--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ yarn_mappings       = 1.16.4+build.9
 loader_version      = 0.11.0
 
 #Mod properties
-mod_version         = 0.0.2-SNAPSHOT
+mod_version         = 0.0.2
 maven_group         = me.geek.tom
 archives_base_name  = twitch-link
 
